modificacion de pantallas

--- a/SIENI/SIENI-web/src/main/webapp/view/formato/administracionSistema/gestionUsuarios/bitacora.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/administracionSistema/gestionUsuarios/bitacora.xhtml
@@ -32,8 +32,8 @@
                                  rowsPerPageTemplate="5,10,15"
                                  reflow="true">
 
-                        <p:column headerText="Transaccion" >
-                            #{formatoPantallas.campo10}
+                        <p:column headerText="Accion" >
+                            #{formatoPantallas.campo15}
                         </p:column>
                         <p:column headerText="Fecha" >
                             #{formatoPantallas.fecha}
@@ -41,10 +41,7 @@
                         <p:column headerText="Hora" >
                             #{formatoPantallas.hora}
                         </p:column>
-                        <p:column headerText="Accion" >
-                            #{formatoPantallas.campo15}
-                        </p:column>
-                        <p:column headerText="Objeto" >
+                        <p:column headerText="Fuente de datos" >
                             #{formatoPantallas.campo20}
                         </p:column>
                         <p:column headerText="Responsable" >
