--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/bitacora.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/bitacora.xhtml
@@ -21,39 +21,35 @@
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel value="Desde:"></p:outputLabel>
-                    <p:inputText value="#{formatoPantallas.fecha}"></p:inputText>
-                    <p:outputLabel value="Hasta:"></p:outputLabel>
-                    <p:inputText value="#{formatoPantallas.fecha}"></p:inputText>                    
+                    <p:outputLabel for="desde" value="Desde:"></p:outputLabel>
+                    <p:calendar id="desde" value="#{bitacoraController.desde}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/mm/yyyy" required="true" requiredMessage="Debe ingresar fecha de nacimiento" placeholder="dd/mm/yyyy" yearRange="c-20:c+0" navigator="true"></p:calendar>
+                    <p:outputLabel for="hasta" value="Hasta:"></p:outputLabel>
+                    <p:calendar id="hasta" value="#{bitacoraController.hasta}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/mm/yyyy" required="true" requiredMessage="Debe ingresar fecha de nacimiento" placeholder="dd/mm/yyyy" yearRange="c-20:c+0" navigator="true"></p:calendar>
                     <div class="EmptyBox20"></div>
-                    <p:dataTable rows="10" var="car" value="#{clasesForm.plantillas}" 
+                    <p:dataTable rows="10" var="car" value="#{bitacoraController.bitacoraList}" 
                                  paginator="false"
                                  paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                  rowsPerPageTemplate="5,10,15"
-                                 reflow="true">
-
-                        <p:column headerText="Transaccion" >
-                            #{formatoPantallas.campo10}
+                                 reflow="true"
+                                 >
+                        <p:column headerText="Accion" >
+                            #{car.bitAccion}
                         </p:column>
                         <p:column headerText="Fecha" >
-                            #{formatoPantallas.fecha}
+                            <f:convertDateTime pattern="hh:mm a" ></f:convertDateTime>
+                            #{car.bitFechaHoraIngreso}
                         </p:column>
                         <p:column headerText="Hora" >
-                            #{formatoPantallas.hora}
+                            #{car.hora}
                         </p:column>
-                        <p:column headerText="Accion" >
-                            #{formatoPantallas.campo15}
-                        </p:column>
-                        <p:column headerText="Objeto" >
-                            #{formatoPantallas.campo20}
+                        <p:column headerText="Fuente de datos" >
+                            #{car.bitacora.bitTabla}
                         </p:column>
                         <p:column headerText="Responsable" >
-                            #{formatoPantallas.campo100}
+                            #{car.usuario}
                         </p:column>
-
-
                         <f:facet name="footer">
-                            Total de Transacciones 999
+                            Total de Registros #{bitacoraController.totalTransacciones}
                         </f:facet>
                     </p:dataTable>
 
@@ -62,11 +58,11 @@
 
                         <h:panelGrid columns="4" class="TexAlCenter" style="margin-bottom:10px" cellpadding="5">
                             <p:outputLabel value="Exportar a:"></p:outputLabel>
-                            <p:selectOneRadio  id="console" value="#{radioView.console}">
+                            <p:selectOneRadio  id="console" value="#{bitacoraController.formatoRpt}">
                                 <f:selectItem itemLabel="Excel" itemValue="Excel" />
                                 <f:selectItem itemLabel="PDF" itemValue="PDF" />
                             </p:selectOneRadio>
-                            <p:commandButton  value="Generar"></p:commandButton>
+                            <p:commandButton  value="Generar" action="#{bitacoraController.generarReporte()}"></p:commandButton>
                             <p:commandButton value="Regresar"></p:commandButton>
                         </h:panelGrid>
                     </div>
